complete photo function
